[package]
name = "scrcpy-mask"
version = "0.0.0"
description = "A Tauri App"
authors = ["AkiChase"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.15", features = ["macos-private-api"] }
tauri-plugin-store = "2.0.0-beta.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "net", "macros", "io-util", "time", "sync"] }
