[package]
name = "scrcpy-mask"
version = "0.6.0"
description = "A Tauri App"
authors = ["AkiChase"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
lazy_static = "1"
log = "0.4"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "process", "net", "macros", "io-util", "time"] }
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
adb_client = "*"
which = "7"
tauri-plugin-opener = "2"
